force-app/main/default/objects/Case_Creation_Condition__c/Case_Creation_Condition__c.object-meta.xml
<CustomObject>
    <description>Child condition under Case_Creation_Rule__c. Each record defines one Opportunity field check evaluated dynamically by CaseCreationRuleEvaluatorAction.</description>
    <label>Case Creation Condition</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Creation Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>