force-app/main/default/objects/Case_Creation_Condition__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Opportunity field API name evaluated at runtime via dynamic sObject.get().</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>