force-app/main/default/objects/Case_Creation_Condition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUALS</fullName>
            </value>
            <value>
                <fullName>NOT_EQUALS</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT_IN</fullName>
            </value>
            <value>
                <fullName>GREATER_THAN</fullName>
            </value>
            <value>
                <fullName>LESS_THAN</fullName>
            </value>
            <value>
                <fullName>GREATER_OR_EQUAL</fullName>
            </value>
            <value>
                <fullName>LESS_OR_EQUAL</fullName>
            </value>
            <value>
                <fullName>IS_NULL</fullName>
            </value>
            <value>
                <fullName>IS_NOT_NULL</fullName>
            </value>
            <value>
                <fullName>IS_TRUE</fullName>
            </value>
            <value>
                <fullName>IS_FALSE</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>