force-app/main/default/objects/Case_Creation_Condition__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Parent Case Creation Rule.</description>
    <label>Rule</label>
    <referenceTo>Case_Creation_Rule__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>