force-app/main/default/objects/Case_Creation_Condition__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Comparison value. For IN/NOT_IN use comma-separated values. Blank for IS_NULL/IS_NOT_NULL/IS_TRUE/IS_FALSE.</description>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>